.vscode-remote/data/logs/20250809T141057/exthost10/output_logging_20250809T161142/4-Prettier.log
["INFO" - 4:11:58 PM] Extension Name: esbenp.prettier-vscode.
["INFO" - 4:11:58 PM] Extension Version: 11.0.0.
["INFO" - 4:11:58 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:13:01 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:13:03 PM] Formatting file:///workspace/Website-starter/src/assets/fonts/fonts.css
["INFO" - 4:13:03 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:13:03 PM] PrettierInstance:
{
  "modulePath": "/workspace/Website-starter/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 4:13:03 PM] Using ignore file (if present) at /workspace/Website-starter/.prettierignore
["INFO" - 4:13:03 PM] File Info:
{
  "ignored": false,
  "inferredParser": "css"
}
["INFO" - 4:13:03 PM] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 4:13:03 PM] Prettier Options:
{
  "filepath": "/workspace/Website-starter/src/assets/fonts/fonts.css",
  "parser": "css",
  "plugins": [
    "/workspace/Website-starter/node_modules/prettier-plugin-astro/dist/index.js",
    "/workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs"
  ],
  "semi": false,
  "trailingComma": "es5",
  "singleQuote": false,
  "printWidth": 80,
  "tabWidth": 2,
  "useTabs": false,
  "bracketSpacing": true,
  "arrowParens": "avoid",
  "htmlWhitespaceSensitivity": "ignore",
  "endOfLine": "lf",
  "embeddedLanguageFormatting": "auto"
}
["ERROR" - 4:13:03 PM] Error formatting document.
["ERROR" - 4:13:03 PM] CssSyntaxError: Unexpected } (25:1)
  23 |                               font-family: "Atyp";
  24 |                               }
> 25 | }
     | ^
SyntaxError: CssSyntaxError: Unexpected } (25:1)
  23 |                               font-family: "Atyp";
  24 |                               }
> 25 | }
     | ^
    at cp (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:11409)
    at Xs (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:18680)
    at Object.gl [as parse] (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:18887)
    at Object.parse (file:///workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs:1329:27573)
    at async parse5 (file:///workspace/Website-starter/node_modules/prettier/index.mjs:16731:11)
    at async coreFormat (file:///workspace/Website-starter/node_modules/prettier/index.mjs:17287:25)
    at async formatWithCursor (file:///workspace/Website-starter/node_modules/prettier/index.mjs:17504:14)
    at async Module.format2 (file:///workspace/Website-starter/node_modules/prettier/index.mjs:19051:25)
["INFO" - 4:13:03 PM] Formatting completed in 70ms.
["INFO" - 4:13:10 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:13:11 PM] Formatting file:///workspace/Website-starter/src/assets/fonts/fonts.css
["INFO" - 4:13:11 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:13:11 PM] PrettierInstance:
{
  "modulePath": "/workspace/Website-starter/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 4:13:11 PM] Using ignore file (if present) at /workspace/Website-starter/.prettierignore
["INFO" - 4:13:11 PM] File Info:
{
  "ignored": false,
  "inferredParser": "css"
}
["INFO" - 4:13:11 PM] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 4:13:11 PM] Prettier Options:
{
  "filepath": "/workspace/Website-starter/src/assets/fonts/fonts.css",
  "parser": "css",
  "plugins": [
    "/workspace/Website-starter/node_modules/prettier-plugin-astro/dist/index.js",
    "/workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs"
  ],
  "semi": false,
  "trailingComma": "es5",
  "singleQuote": false,
  "printWidth": 80,
  "tabWidth": 2,
  "useTabs": false,
  "bracketSpacing": true,
  "arrowParens": "avoid",
  "htmlWhitespaceSensitivity": "ignore",
  "endOfLine": "lf",
  "embeddedLanguageFormatting": "auto"
}
["INFO" - 4:13:11 PM] Formatting completed in 29ms.
["INFO" - 4:13:31 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:13:46 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:15:04 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:15:25 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:15:47 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:15:47 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:15:49 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:15:57 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:15:58 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:16:00 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:16:10 PM] Using config file at /workspace/Website-starter/.prettierrc
